src/test/ui/span/pub-struct-field.stderr
error[E0124]: field `bar` is already declared
  --> $DIR/pub-struct-field.rs:18:5
   |
17 |     bar: u8,
   |     ------- `bar` first declared here
18 |     pub bar: u8,
   |     ^^^^^^^^^^^ field already declared

error[E0124]: field `bar` is already declared
  --> $DIR/pub-struct-field.rs:19:5
   |
17 |     bar: u8,
   |     ------- `bar` first declared here
18 |     pub bar: u8,
19 |     pub(crate) bar: u8,
   |     ^^^^^^^^^^^^^^^^^^ field already declared

error: aborting due to 2 previous errors

